--- a/src/Components/Home/PokemonList/Pokemon/Detail/PokemonDetail.scss
+++ b/src/Components/Home/PokemonList/Pokemon/Detail/PokemonDetail.scss
@@ -39,6 +39,7 @@
     transition: all 0.4s 1.5s;
     display: flex;
     flex-direction: column;
+    perspective: 500px;
     .cardPhoto {
       display: flex;
       justify-content: center;
@@ -80,6 +81,7 @@
   width: 400px;
   height: 400px;
   border-radius: 50%;
+  transform-style: preserve-3d;
 
   .pokeBallTop {
     width: 100%;
@@ -98,6 +100,18 @@
     box-shadow: -50px -20px 50px rgba(180, 180, 180, 0.774) inset,
       0 40px 100px rgb(207, 207, 207);
     transition: transform 1s, opacity 2s;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 70%;
+      height: 100%;
+      background-color: rgba(179, 179, 179, 0.801);
+      border-radius: 50%;
+      left: 50%;
+      transform: rotateX(80deg) translateX(-50%) translateZ(-200px);
+      filter: blur(30px);
+      box-shadow: 0 0 0 30px rgba(179, 179, 179, 0.801);
+    }
     .pokeBallBottomOpen {
       display: flex;
       justify-content: center;
