--- a/src/Components/Home/Search/Search.scss
+++ b/src/Components/Home/Search/Search.scss
@@ -3,15 +3,45 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  input {
-    width: 400px;
-    height: 40px;
-    margin: 2rem;
-    border-radius: 4px;
-    border: none;
-    border-bottom: 0.2rem solid grey;
-    text-align: center;
-    outline: none;
+  .form {
+    position: relative;
+    input {
+      width: 400px;
+      height: 40px;
+      margin: 2rem;
+      border-radius: 4px;
+      border: none;
+      border-bottom: 0.2rem solid grey;
+      text-align: center;
+      outline: none;
+    }
+    .searchList {
+      top: 100%;
+      left: 0;
+      width: 100%;
+      max-height: 100px;
+      overflow-y: scroll;
+      position: absolute;
+      background-color: #fff;
+      z-index: 1;
+      li {
+        align-items: center;
+        display: flex;
+        justify-content: space-around;
+        border-bottom: 1px solid rgb(201, 201, 201);
+        p {
+          font-size: 1.5rem;
+          font-weight: bold;
+        }
+        img {
+          width: 50px;
+        }
+        .pokeball {
+          width: 30px;
+          border-radius: 50%;
+        }
+      }
+    }
   }
   .controls {
     display: flex;
